# vision-serving-platform

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  buf.yaml  pyproject.toml
.github/workflows/: ci.yaml
configs/: server.yaml
k8s/base/: hpa.yaml  kustomization.yaml  namespace.yaml
k8s/base/gateway/: configmap.yaml  deployment.yaml  service.yaml
k8s/base/triton/: deployment.yaml  service.yaml  serviceaccount.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
locust/: locustfile.py
locust/results/: mixed_stats.csv  mixed_stats_history.csv  ramp_100_stats.csv  ramp_100_stats_history.csv  ramp_500_stats.csv  ramp_500_stats_history.csv  ramp_exceptions.csv  ramp_failures.csv  ramp_stats.csv  ramp_stats_history.csv
monitoring/alerts/: inference-rules.yaml
monitoring/helm/: dcgm-values.yaml  loki-values.yaml  prometheus-values.yaml
proto/: inference.proto
quantization/: calibration_dataset.py  convert_tensorrt.py  export_clip.py  export_onnx.py  validate_clip.py  validate_onnx.py
scripts/: create_dashboards.py  deploy_to_gke.sh  test_triton_local.py  upload_models.sh
src/serving/: clip_postprocessing.py  gateway.py  logging_config.py  metrics.py  postprocessing.py  preprocessing.py  settings.py
src/serving/handlers/: classify.py  health.py  zeroshot.py
terraform/: backend.tf  main.tf  outputs.tf  variables.tf
terraform/modules/gke/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
tests/smoke/: repo_structure.py  test_clip_structure.py  test_k8s_manifests.py  test_locust.py
tests/unit/: test_clip_postprocessing.py  test_postprocessing.py  test_preprocessing.py  test_quantization.py  test_settings.py  test_triton_config.py
triton_repo/clip_text/: config.pbtxt
triton_repo/clip_visual/: config.pbtxt
triton_repo/vit_fp32/: config.pbtxt
triton_repo/vit_fp32/1/: config.json
triton_repo/vit_int8/: config.pbtxt
